--- a/index.html
+++ b/index.html
@@ -15,4 +15,8 @@
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/hzXm-pJX32E?si=LNNdlM8L-jFLjkkD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
+<head>
+    <link rel="stylesheet" href="styless.css">
+</head>
+
 <body>
