--- a/index.html
+++ b/index.html
@@ -1,22 +1,56 @@
 <head>
-<title> THAYFLIX </title>
-
-<head>
-
-
-<body>
-<header> THAYFLIX </header>
-
-<h1> FILME DE COMÉDIA</h1>
-<P> MINHA MÃE E UMA PEÇA</P>
-<P> AS BRANQUELAS </P>
-<P> OS FAROFEIROS </P>
-<P>  TO RYCA </P>
-
-<iframe width="560" height="315" src="https://www.youtube.com/embed/hzXm-pJX32E?si=LNNdlM8L-jFLjkkD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-
-<head>
-    <link rel="stylesheet" href="styless.css">
+<link rel="stylesheet" href="styles.css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link
+href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,
+600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
+rel="stylesheet">
+<title>tHAY Music</title>
 </head>
-
 <body>
+<header>THAYMUSIC</header>
+<section class="chamada">
+<div class="chamada-texto">
+<h1>SERTANEJO</h1>
+<p>MUSICAS</p>
+</div>
+<div>
+
+</div>
+</section>
+<section class="categoria">
+<h2>Estilo de músicas</h2>
+<div class="categoria-videos">
+<a
+href="https://www.youtube.com/watch?v=2cdF8Y3J1e4">
+<img src="https://img.youtube.com/vi/2cdF8Y3J1e4/maxresdefault.jpg" />
+</a>
+<a
+href="https://www.youtube.com/watch?v=qDQe6lz2LPY"
+>
+<img src="https://img.youtube.com/vi/qDQe6lz2LPY/maxresdefault.jpg" />
+</a>
+<a
+href="https://www.youtube.com/watch?v=-sORyNYNygQ">
+<img src="https://img.youtube.com/vi/-sORyNYNygQ/maxresdefault.jpg" />
+</a>
+<a
+href="https://www.youtube.com/watch?v=-sORyNYNygQ
+">
+<img src="https://img.youtube.com/-sORyNYNygQ/maxresdefault.jpg" />
+</a>
+<a
+href="https://www.youtube.com/watch?v=Md4WASxp3-s
+">
+<img src="https://img.youtube.com/vi/Md4WASxp3-s/maxresdefault.jpg" />
+</a>
+<a
+href="https://www.youtube.com/watch?v=Uq9cEVLPFAo
+">
+<img src="https://img.youtube.com/vi/Uq9cEVLPFAo/maxresdefault.jpg" />
+</a>
+</div>
+</section>
+</body>
+</html>
