--- a/index.html
+++ b/index.html
@@ -1,56 +1,104 @@
+<!DOCTYPE html>
+<html lang="pt-BR">
 <head>
-<link rel="stylesheet" href="styless.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="style.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link
-href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,
-600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
-rel="stylesheet">
-<title>tHAY Music</title>
+href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,200;0,300;0,400;0,
+500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+<title>Em busca da cidade perdida</title>
 </head>
 <body>
-<header>THAYMUSIC</header>
-<section class="chamada">
-<div class="chamada-texto">
-<h1>SERTANEJO</h1>
-<p>MUSICAS</p>
+<main>
+<div class="passo ativo" id="passo-0">
+<img src="img/cenario-passo0.png" alt="">
+<p>Um dia desses, dentro de um livro da biblioteca da escola, eu descobri uma carta
+antiga sobre uma cidade perdida, escondida por riquezas e belezas naturais. Nessa carta, a
+autora deixa algumas pistas para encontrar essa cidade e eu decidi segui-las!</p>
+<button class="btn-proximo" data-proximo="1">Rio de Janeiro</button>
+<button class="btn-proximo" data-proximo="2">Pernambuco</button>
 </div>
-<div>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/10XarNSkw0s?si=m0Xa3Yxf1zxsjtuD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<div class="passo" id="passo-1">
+<p>Você começa sua jornada no Rio de Janeiro, subindo o Pico da Tijuca ao amanhecer
+para encontrar a primeira pista.</p>
+<button class="btn-proximo" data-proximo="3">Procurar a pista no topo do
+pico</button>
+<button class="btn-proximo" data-proximo="4">Desistir e voltar para casa</button>
 </div>
-</section>
-<section class="categoria">
-<h2>Estilo de músicas</h2>
-<div class="categoria-videos">
-<a
-href="https://www.youtube.com/watch?v=2cdF8Y3J1e4">
-<img src="https://img.youtube.com/vi/2cdF8Y3J1e4/maxresdefault.jpg" />
-</a>
-<a
-href="https://www.youtube.com/watch?v=qDQe6lz2LPY"
->
-<img src="https://img.youtube.com/vi/qDQe6lz2LPY/maxresdefault.jpg" />
-</a>
-<a
-href="https://www.youtube.com/watch?v=-sORyNYNygQ">
-<img src="https://img.youtube.com/vi/-sORyNYNygQ/maxresdefault.jpg" />
-</a>
-<a
-href="https://www.youtube.com/watch?v=-sORyNYNygQ
-">
-<img src="https://img.youtube.com/-sORyNYNygQ/maxresdefault.jpg" />
-</a>
-<a
-href="https://www.youtube.com/watch?v=Md4WASxp3-s
-">
-<img src="https://img.youtube.com/vi/Md4WASxp3-s/maxresdefault.jpg" />
-</a>
-<a
-href="https://www.youtube.com/watch?v=Uq9cEVLPFAo
-">
-<img src="https://img.youtube.com/vi/Uq9cEVLPFAo/maxresdefault.jpg" />
-</a>
+<div class="passo" id="passo-2">
+<p>Em Pernambuco, você visita a histórica cidade de Olinda. Na carta, uma das pistas
+indica que para localizar a entrada para a cidade perdida você deve procurar a próxima pista
+em um dos pontos turísticos da cidade. Por qual você começa?</p>
+<button class="btn-proximo" data-proximo="5">Investigar as igrejas antigas</button>
+<button class="btn-proximo" data-proximo="6">Explorar as praias próximas</button>
 </div>
-</section>
+<div class="passo" id="passo-3">
+<p>No topo do Pico da Tijuca, você encontra uma antiga inscrição apontando que a
+próxima pista está
+localizada no Amazonas.</p>
+<button class="btn-proximo" data-proximo="7">Seguir para o Amazonas</button>
+</div>
+<div class="passo" id="passo-4">
+<img src="img/cenario-passo4-voltar-casa.png" alt="imagem voltando para casa e
+desitindo da aventura">
+<p>Você decide que a aventura é grande demais e volta para casa, mas sempre se
+pergunta o que teria
+encontrado.</p>
+</div>
+
+<div class="passo" id="passo-5">
+<p>Nas igrejas de Olinda, você descobre um mapa antigo escondido atrás de um altar,
+apontando que a próxima
+pista está no Amazonas.</p>
+<button class="btn-proximo" data-proximo="7">Viajar para o Amazonas</button>
+</div>
+<div class="passo" id="passo-6">
+<p>Explorando as praias, você encontra uma caverna escondida, mas ela leva a um beco
+sem saída.</p>
+<button class="btn-proximo" data-proximo="8">Voltar e explorar as igrejas</button>
+</div>
+<div class="passo" id="passo-7">
+<p>No Amazonas, a busca pela cidade perdida se intensifica. Você se depara com um rio
+bifurcado.</p>
+<button class="btn-proximo" data-proximo="9">Seguir pelo rio à esquerda</button>
+<button class="btn-proximo" data-proximo="10">Seguir pelo rio à direita</button>
+</div>
+<div class="passo" id="passo-8">
+<p>De volta às igrejas, você finalmente encontra o mapa antigo. Agora, para o
+Amazonas!</p>
+<button class="btn-proximo" data-proximo="7">Seguir para o Amazonas</button>
+</div>
+<div class="passo" id="passo-9">
+<p>O rio à esquerda leva você a uma cachoeira escondida com inscrições antigas que
+revelam a entrada da
+cidade perdida.</p>
+<button class="btn-proximo" data-proximo="11">Explorar a cidade perdida</button>
+</div>
+<div class="passo" id="passo-10">
+<p>O rio à direita termina em uma área pantanosa. Apesar de belas vistas, não há sinais
+da cidade perdida
+aqui.</p>
+<button class="btn-proximo" data-proximo="12">Retornar e tentar o outro
+rio</button>
+</div>
+<div class="passo" id="passo-11">
+<img src="img/cenario-passo11-cidade-perdida.png" alt="encontrando uma cidade
+maravilhosa perdida no Amazonas">
+<p>Dentro da cidade perdida, você descobre tesouros inimagináveis e decide se dedicar
+a estudar e preservar
+este lugar</p>
+</div>
+<div class="passo" id="passo-12">
+
+<p>Retornando e escolhendo o rio à esquerda, você finalmente encontra a cachoeira
+escondida e as inscrições
+que levam à cidade perdida.</p>
+<button class="btn-proximo" data-proximo="11">Explorar a cidade perdida</button>
+</div>
+</main>
+<script src="script.js"></script>
 </body>
 </html>
